--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,9 +1,4 @@
-<h1>New user</h1>
+<%= stylesheet_link_tag 'forms' %>
 
 <%= render "form", user: @user %>
 
-<br>
-
-<div>
-  <%= link_to "Login", login_path %>
-</div>
