--- a/app/views/fetch/index.html.erb
+++ b/app/views/fetch/index.html.erb
@@ -1,24 +1,45 @@
 <% if @data.present? %>
-
   <%# Display fetched data in a table %>
-  <table>
-    <thead>
-      <tr>
-        <th>Fact</th>
-        <th>Verified</th>
-        <th>Created On</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @data.each do |fact| %>
-        <tr>
-          <td><%= fact['text'] %></td>
-          <td><%= fact['status']['verified'] ? 'True' : 'False' %></td>
-          <td><%= Time.parse(fact['createdAt']).strftime('%d-%m-%Y %H:%M:%S') %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  </table>
-<% else %>
-    <p>No data to display</p>
-<% end %>
+  <div class="container my-5">
+    <div class="d-flex justify-content-between">
+        <h1 class="text-left">Cat Facts </h1>
+        <%= link_to "Back", root_path, class: "btn btn-secondary my-2" %>
+    </div>
+    <div class="table-responsive">
+      <table class="table table-bordered table-hover">
+        <thead class="thead-dark">
+          <tr >
+            <th class="px-4">#</th>
+            <th>Fact</th>
+            <th>Verified</th>
+            <th>Created On</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @data.each_with_index do |fact, index| %>
+            <tr>
+              <td class="text-center"><%= index + 1 %></td>
+              <td><%= fact['text'] %></td>
+              <td><span class="badge <%= fact['status']['verified'] ? 'badge-success' : 'badge-danger' %>"><%= fact['status']['verified'] ? 'True' : 'False' %></span></td>
+              <td><%= Time.parse(fact['createdAt']).strftime('%d-%m-%Y %H:%M:%S') %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  <% else %>
+    <p class="text-warning">No data to display</p>
+  <% end %>
+</div>
+
+<style>
+  .table-hover tbody tr:hover {
+    background-color: #f5f5f5;
+  }
+  .badge-success {
+    background-color: #28a745;
+  }
+  .badge-danger {
+    background-color: #dc3545;
+  }
+</style>
