fix: broken link

--- a/app/views/fetch/index.html.erb
+++ b/app/views/fetch/index.html.erb
@@ -3,7 +3,7 @@
   <div class="container my-5">
     <div class="d-flex justify-content-between">
         <h1 class="text-left">Cat Facts </h1>
-        <%= link_to "Back", root_path, class: "btn btn-secondary my-2" %>
+        <%= link_to "Back", home_path, class: "btn btn-secondary my-2" %>
     </div>
     <div class="table-responsive">
       <table class="table table-bordered table-hover">
